# power_spherical

./: README.md  artifact-authenticity.md  example.ipynb.license  pyproject.toml
.github/: dependabot.yml
.github/workflows/: codeql.yml  create_release.yml  create_wheel.yaml  publish_prerelease.yaml  reuse.yml
power_spherical/: __init__.py  distributions.py
tests/: conftest.py  test_export_onnx.py  test_power_spherical.py
