[tool.poetry]
name = "power-spherical"
version = "0.2.9"
description = "Pytorch implementation of the Power Spherical distribution"
authors = ["Nicola De Cao"]
maintainers = [
  "Andreas Fehlner <fehlner@arcor.de>"
]
repository = "https://github.com/andife/power_spherical"
readme = "README.md"
license = "MIT"
keywords = ["pytorch","machine-learning","deep-learning","manifold-learning"]
classifiers = [
"Development Status :: 5 - Production/Stable",
"License :: OSI Approved :: MIT License",
"Programming Language :: Python :: 3",
"Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.urls]
Homepage = "https://github.com/andife/power_spherical"
Issues = "https://github.com/andife/power_spherical/issues"